Updated 'style.css' - Added 'root'

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@600;700;900&display=swap");
 
+:root {
+  --main-color: #f16d7f;
+  --dark-color: #222;
+  --light-color: #fff;
+}
+
 * {
   padding: 0;
   margin: 0;
