--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@600;700;900&display=swap");
 
 :root {
-  --main-color: #f16d7f;
+  --primary-color: #f16d7f;
   --dark-color: #222;
   --light-color: #fff;
 }
@@ -15,7 +15,7 @@
 body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  background: #fff;
+  background: var(--light-color);
 }
 img {
   display: block;
@@ -46,7 +46,7 @@ button {
   padding-right: calc(50% - 570px);
 }
 .header {
-  background-color: #222;
+  background-color: var(--dark-color);
 }
 .navigation {
   display: flex;
@@ -72,27 +72,24 @@ button {
   gap: 33px;
 }
 .nav__button a {
-  background-color: #222;
+  background-color: var(--dark-color);
 }
 .nav__button a img {
-  background-color: #222;
+  background-color: var(--dark-color);
   transition: all 0.3s;
 }
 .nav__button a svg {
   transition: all 0.3s;
 }
-.nav__button img:hover {
-  transform: scale(1.1);
-}
-.nav__button img:active {
-  fill: #f16d7f;
-}
+.nav__button img:hover,
 .nav__button a svg:hover {
+  fill: var(--primary-color);
+}
+.nav__button img:active,
+.nav__button a svg:active {
   transform: scale(1.1);
 }
-.nav__button a svg:active {
-  fill: #f16d7f;
-}
+
 .cart {
   display: none;
 }
@@ -109,7 +106,7 @@ button {
   z-index: 2;
   margin-top: 0px;
   right: calc(50% - 570px);
-  background-color: #fff;
+  background-color: var(--light-color);
 }
 .menu__active {
   margin-top: 32px;
@@ -131,7 +128,7 @@ button {
   top: 32px;
   right: 20px;
   width: 15px;
-  background-color: #fff;
+  background-color: var(--light-color);
   border: none;
   opacity: 0.7;
   transition: transform 0.3s;
@@ -144,7 +141,7 @@ button {
   text-align: start;
   font-weight: 400;
   font-size: 14px;
-  color: #f16d7f;
+  color: var(--primary-color);
 }
 .menu__list {
   list-style-type: none;
@@ -162,7 +159,7 @@ button {
 }
 .menu__list li a:hover {
   font-weight: bold;
-  color: #f16d7f;
+  color: var(--primary-color);
 }
 .menu__list li a:active {
   color: #000;
@@ -184,7 +181,7 @@ button {
   justify-content: left;
   flex-direction: column;
   align-items: start;
-  border-left: 12px solid #f16d7f;
+  border-left: 12px solid var(--primary-color);
   padding-left: 16px;
 }
 .top h1 {
@@ -192,22 +189,21 @@ button {
   font-weight: 900;
   font-size: 48px;
   text-align: left;
-  color: #222;
+  color: var(--dark-color);
 }
 .top h2 {
   text-align: left;
   font-size: 32px;
-  color: #222;
+  color: var(--dark-color);
 }
 span {
   font-size: 32px;
-  color: #f16d7f;
+  color: var(--primary-color);
 }
 .section__card {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   margin-top: 65px;
   margin-bottom: 96px;
   gap: 30px;
@@ -222,14 +218,17 @@ span {
 .card__woman {
   background-image: url(./img/FOR_WOMEN.svg);
   height: 260px;
+  object-fit: cover;
 }
 .card__man {
   background-image: url(./img/FOR_MEN.svg);
   height: 260px;
+  object-fit: cover;
 }
 .card__kids {
   background-image: url(./img/FOR_KIDS.svg);
   height: 260px;
+  object-fit: cover;
 }
 .card__acces {
   grid-column: span 3;
@@ -254,12 +253,12 @@ span {
   display: block;
   font-weight: 400;
   font-size: 16px;
-  color: #fff;
+  color: var(--light-color);
 }
 .card__span {
   display: block;
   font-size: 24px;
-  color: #f16d7f;
+  color: var(--primary-color);
 }
 
 .shop__items {
@@ -268,7 +267,7 @@ span {
 .shop__items h1 {
   font-weight: 400;
   font-size: 30px;
-  color: #222;
+  color: var(--dark-color);
 }
 .shop__items p {
   font-weight: 400;
@@ -287,7 +286,7 @@ span {
 .shop__items h1 {
   font-weight: 400;
   font-size: 30px;
-  color: #222;
+  color: var(--dark-color);
   margin-bottom: 6px;
 }
 .shop__items p {
@@ -330,11 +329,11 @@ span {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border: 1px solid #fff;
+  border: 1px solid var(--light-color);
   padding: 11px 16px 8px 14px;
   font-weight: 400;
   font-size: 14px;
-  color: #fff;
+  color: var(--light-color);
   background: inherit;
   transition: transform 0.3s;
 }
@@ -370,7 +369,7 @@ span {
   font-size: 16px;
   border: none;
   background: none;
-  color: #f16d7f;
+  color: var(--primary-color);
   outline: none;
   transition: all 0.3s;
 }
@@ -397,7 +396,7 @@ span {
 }
 .button__product:hover {
   background-color: #f26376;
-  color: #fff;
+  color: var(--light-color);
 }
 .button__product:active {
   transform: scale(0.95);
@@ -496,8 +495,8 @@ span {
   font-weight: 400;
   font-size: 14px;
   text-align: center;
-  background-color: #f16d7f;
-  color: #fff;
+  background-color: var(--primary-color);
+  color: var(--light-color);
   width: 100px;
   height: 50px;
   border-top-right-radius: 25px 25px;
@@ -536,7 +535,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--light-color);
   width: 32px;
   height: 32px;
   transition: all 0.3s;
@@ -547,7 +546,7 @@ span {
   align-items: center;
 }
 .footer__icon:hover {
-  background-color: #f16d7f;
+  background-color: var(--primary-color);
 }
 .footer__icon:hover svg {
   fill: white;
@@ -584,7 +583,7 @@ span {
     border-radius: 50%;
     font-weight: 400;
     font-size: 12px;
-    color: #fff;
+    color: var(--light-color);
     background-color: #f26376;
   }
   .top__image {
@@ -616,6 +615,7 @@ span {
   .section__card {
     width: 735px;
     margin-bottom: 110px;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 20px;
   }
   .card__woman {
