--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a:hover {
 }
 .nav__button img:active,
 .nav__button svg:active {
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 .cart {
@@ -393,7 +393,7 @@ span {
   background: none;
   color: var(--primary-color);
   outline: none;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
 }
 .item_buttons:hover {
   transform: scale(1.1);
@@ -414,7 +414,7 @@ span {
   font-size: 16px;
   background: none;
   color: var(--second-primary);
-  transition: all 0.3s;
+  transition: all 0.3s ease;
 }
 .button__product:hover {
   background-color: var(--second-primary);
